# EventLoop

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  EventLoop.pc.in  README.md
.github/workflows/: build.yml  test.yml
include/: application.hpp  event.h  event.hpp  eventloop.h  eventloop.hpp
src/: application.cpp  eventloop.cpp
src/utils/: compat.hpp  conditionalvar.cpp  conditionalvar.h  conditionalvar.hpp  mutex.cpp  mutex.h  mutex.hpp  mutexlocker.cpp  mutexlocker.h  mutexlocker.hpp  ptrqueue.h  ptrqueue.hpp
tests/: CMakeLists.txt  eventloop_test.cpp  eventlooptst.cpp
tests/include/: stopevent.hpp
tests/src/: eventlooptst.cpp  ptrqueuetst.cpp  tst_application.cpp  tst_eventloop.cpp
